Issue 6949055: SITE-1132: User menu hidden under results pane in query editor

--- a/www/query/css/editor.less
+++ b/www/query/css/editor.less
@@ -35,11 +35,11 @@
 
 #page-title {
   margin: 0 0 10px 10px;
-  
+
   button {
     float: right;
   }
-  
+
   .page-title {
     font-size: 2em;
     margin-left: 0;
@@ -95,7 +95,7 @@
 }
 
 .cuecard-outputPane-tabs .current span {
-  z-index: 100; 
+  z-index: 9;
 }
 
 .tabbed-content em {
@@ -126,7 +126,7 @@
   overflow: auto;
 }
 
-.cuecard-controlPane-powerTool .button, 
+.cuecard-controlPane-powerTool .button,
 .query-options-textbox {
   width: 130px;
   float: left;
@@ -227,13 +227,13 @@
 }
 
 .cuecard-queryEditor-controls-options {
-  float: left; 
+  float: left;
   font-size: 1.3em;
   line-height: 1;
   font-weight: bold;
   color: #555;
   padding: 6px 5px;
-  
+
   .switch {
     margin-left: 5px;
   }
